Mac: adjust sizes of progress bars to be equal to painted size.

Moves code to compute the size into the style adjustment phase, and simplifies
it according to the actual margins specified in the style configs.

BUG=632319
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2305133002
Cr-Commit-Position: refs/heads/master@{#416955}

Former-commit-id: ddcf55c02da8508bb6766b078e70100d5ad66621